# TechChallengeFiap1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: main.py
app/api/: deps.py
app/api/routers/: auth.py  auth_controller.py  books_controller.py  categories_controller.py  health_controller.py  stats_controller.py  user_controller.py
app/core/config/: .env  database_settings.py  redis_settings.py  setting.py
app/core/start_up/: bootstrap.py
app/models/dtos/: book_dto.py  category_dto.py  overview_dto.py  stats_dto.py  top_rateds_dto.py  user_dto.py
app/models/entities/: user.py
app/repositories/: user_repository.py
app/security/: jwt_provider.py
app/services/: books_service.py  extract.py  redis_service.py  security_service.py  statistics_service.py  user_service.py
app/utils/: functions.py
