[tool.poetry]
name = "techchallengefiap1"
version = "0.1.0"
description = ""
authors = ["Matheus Andrade <matheusroberto.alvesandrade1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
