[tool.poetry]
name = "techchallengefiap1"
version = "0.1.0"
description = ""
authors = [
	"Matheus Andrade <matheusroberto.alvesandrade1@gmail.com>",
	"Adryen Simoes <adryen.simoes@outlook.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
psycopg2 = "^2.9.10"
requests = "^2.32.5"
psycopg2-binary = "^2.9.10"
redis = "^6.4.0"
pydantic = "^2.11.9"
beautifulsoup4 = "^4.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
